--- a/resume.tex
+++ b/resume.tex
@@ -32,10 +32,9 @@
   integrative study to explore aquatic environments beneath the Antarctic Ice
   Sheet.}
   \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}
-       {Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.} Worked
-       alongside engineers in developing acquisition software and sensor integration.
-       Project responsibilities included maintenance and operation of instruments and equipment,
-       report writing, troubleshooting fiber-optic and copper communications networks, organizing equipment purchases and shipments.
+       {Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.} Helped in developing data acquisition software and sensor integration.
+       Other duties included maintenance and operation of oceanographic instruments and operational equipment,
+       report writing, organizing purchase and shipment of field supplies and equipment.
   
 \item Mapped seafloor habitats and geology of Puget Sound as part of The Nature
   Conservancy's initiative to foster public awareness and conservation of marine
@@ -61,13 +60,13 @@
 \datedsubsection{Academic Hourly, \textit{Illinois State Geological Survey}}{2008--2009}
 \begin{itemize}
 \item \href{http://www.isgs.illinois.edu/sites/isgs/files/maps/isgs-quads/aurora-south-sg.pdf}{Prepared geologic maps from LIDAR data, drill cores and satellite imagery.}
-\item Conducted fieldwork around Illinois including geophysical surveying, geologic drilling, and well installation for watershed and aquifer characterization. 
+\item Conducted fieldwork around Illinois including geophysical surveying, geologic drilling, and well logging for watershed and aquifer characterization. 
 \end{itemize}
 
 \section{Other Experience}
 \begin{itemize}
 \item STEMfest volunteer communicating importance of polar research and organizing educational outreach activities for k-12 students.
-\item Experience troubleshooting and repairing electronics.
+\item Familiarity with common electronic repair and test equipment.
 \end{itemize}
 
 \section{Programming Experience}
@@ -75,7 +74,7 @@
 \item Python, BASH, C, Matlab, R, JavaScript, SQL, HTML/CSS
 \item Relevant coursework in geospatial methods and modeling, web mapping, and network applications in C.
 \item Familiar with common libraries for numerical programming, data viz,
-  web mapping, geospatial analysis, signal processing, statistics, networking, 
+  web mapping, geospatial analysis, signal processing, statistics, networking, and data archival. 
 \item \href{https://github.com/tohodson/velodyne_tools}{Developed drivers and hardware for a backpack mounted LIDAR for mapping adverse environments.}
 \end{itemize}
 
@@ -84,4 +83,6 @@ ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, GMT, Fledermaus, Microsoft Office
 
 \section{Professional Organizations}
 American Geophysical Union, Sigma Xi, Geological Society of America
+
 \end{document} 
+
