updated refs and started to update work exp

--- a/cv.tex
+++ b/cv.tex
@@ -1,7 +1,7 @@
 \documentclass{cv_TOH}
 
 \usepackage[letterpaper,top=2cm,bottom=2cm,left=2cm,right=2cm]{geometry}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 
 \pagenumbering{gobble}
 
@@ -13,7 +13,7 @@
 \input{sections/education.tex}
 \input{sections/experience.tex}
 \input{sections/publications.tex}
-\input{sections/fieldwork.tex}
+\input{sections/fieldwork_s.tex}
 
 \newpage
 
