--- a/sections/fieldwork.tex
+++ b/sections/fieldwork.tex
@@ -2,12 +2,16 @@
 % Fieldwork
 \section{Fieldwork} 
 \textbf{Whillans Ice Stream, Grounding Zone} \hfill \textbf{2015}
+Deployed instruments and recovered sediment cores beneath the Ross Ice Shelf. \\ 
+
+\textbf{New England Seamount Chain, North Atlantic} \hfill \textbf{2014}
+Mapped seafloor off the coast of Rhode Island during Okeanos Explorer expedition EX1404 Leg 1. \\
 
 \textbf{Lake Tahoe, California} \hfill \textbf{2013}\\
 Sea trials of the SIR, a ROV designed for exploration and surveying beneath ice shelves.\\
 
 \textbf{Whillans Ice Stream, Antarctica} \hfill \textbf{2013}\\
-Deployed instruments into and recovered samples from an Antarctic lake beneath 800m of ice.\\
+Deployed instruments into and recovered sediment cores from an Antarctic lake beneath 800m of ice.\\
 
 \textbf{Windless Bight, Antarctica} \hfill \textbf{2012}\\
 Field tests for instruments, launch and recovery system, and hot water drill prior to deployment into the deep field.\\
