--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,7 @@
 \documentclass{cv_TOH}
 
 \usepackage[letterpaper,top=2cm,bottom=2cm,left=2cm,right=2cm]{geometry}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 
 \pagenumbering{gobble}
 
