--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -2,7 +2,22 @@
 % Professional Experience
 \section{Professional Experience}
 
-\datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--Present}
+
+\datedsubsection{Associate Field Coordinator, \textit{Illinois State Water Survey}}{2015--Present}
+\begin{itemize}
+\item Monitored stream  for NSF funded Critical Zone Observatory to quantify ** of Intensively Managed Landscapes 
+\item Maintained equipment and instrumentation at stream gaging stations
+\item XXXX
+\end{itemize}
+
+\datedsubsection{Webmapping Intern, \textit{City of Urbana}}{Fall, 2015}
+\begin{itemize}
+\item Prepared an interactive webmap of historical buildings and architecture in the city of Urbana.
+\item Built custom webmap using Mapbox, Leaflet, JQuery, and BootstrapJS. 
+
+\end{itemize}
+
+\datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--2015}
 \begin{itemize}
 \item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an
   integrative study to explore aquatic environments beneath the Antarctic Ice
