--- a/sections/publications.tex
+++ b/sections/publications.tex
@@ -1,42 +1,43 @@
 %__________________________________________________________________________________________________________________
 % Journal Publications
 \section{Publications}
+\begin{thebibliography}{1}
+\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D, Mukucki, J., Scherer, R.P., Branecky, C., Tulaczyk, S., Puttkammer, R., Coenen, J., and the WISSARD Science Team. 
+\textsl{in prep}. Ocean influence on the Whillans Ice Stream Grounding Zone, Antarctica. 
 
-\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{submitted}. Stream-powered glaciers: another simple model of glacial erosion.
+\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep}. Subglacial streams drive rapid erosion and relief generation during glaciation.
 
-\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{submitted}. SLW Processes 
+\bibitem{}\textbf{Hodson, T.O.}, , \textsl{submitted}. Physical processes in Subglacial Lake Whillans, West Antarctica.
+\textsl{Earth and Planetary Science Letters}.
 
-%Mikuki, J., et al. \textsl{submitted} Subglacial Lake Whillans Biogeochemistry: A synthesis of current knowledge
-%Tristy Vick Meyers
-
-\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep.}, The Late-Pleistocene Retreat of the Glacier Bay Ice-Stream.
-
+\bibitem{}Mikuki, J., et al., 2016, Subglacial Lake Whillans Biogeochemistry: A synthesis of current knowledge. \textsl{Phil. Trans. R. Soc. A}.
+\bibitem{}Vick-Majors, T.V., et al., 2015, Biogeochemistry and microbial diversity in the marine cavity beneath the McMurdo Ice Shelf, Antarctica.
+\textsl{Limnology and Oceanography}.
+\bibitem{}Christner, B.C., et al., 2014, A microbial ecosystem beneath the West Antarctic ice sheet. \textsl{Nature}.
+\bibitem{}Tulaczyk, S, et al., 2014, WISSARD at Subglacial Lake Whillans, West Antarctica: scientific operations and initial observations. \textsl{Annals of Glaciology}
+\end{thebibliography}
 %__________________________________________________________________________________________________________________
 % Other Publications
 \section{Maps}
-\textbf{Hodson, T.O.}, et al., \textsl{in review}, CMECS Geoform and Substrate Maps \textsl{in} Cochrane, G.R., eds., Southern Salish Sea Map Series -- Admiralty Inlet, Washington: U.S. Geological Survey Scientific Investigations Map XXXX, Two sheets.
-
-\textbf{Hodson, T.O.}, Cochrane, G.R., and Powell, R.D., 2013, Marine benthic habitat mapping of the West Arm, Glacier Bay National Park and Preserve, Alaska: U.S. Geological Survey Scientific Investigations Map 3253, pamphlet 29 p., 4 sheets, scale 1:50,000, http://pubs.usgs.gov/sim/3253/.
-
-Curry, B.B. and \textbf{Hodson, T.O.}, 2009, Surficial Geology of Aurora South Quadrangle, DuPage, Kane, Kendall, and Will Counties, Illinois. Illinois State Geological Survey, 1:24,000. Two sheets.
-
+\begin{thebibliography}{2}
+\bibitem{}Cochrane, G.R., et al., 2015. Southern Salish Sea Habitat Map Series: Admiralty Inlet: U.S. Geological Survey Open-File Report 1073.
+\bibitem{}\textbf{Hodson, T.O.}, Cochrane, G.R., and Powell, R.D., 2013, Marine benthic habitat mapping of the West Arm, Glacier Bay National Park and Preserve, Alaska: U.S. Geological Survey Scientific Investigations Map 3253, pamphlet 29 p., 4 sheets, scale 1:50,000, http://pubs.usgs.gov/sim/3253/.
+\bibitem{}Curry, B.B. and \textbf{Hodson, T.O.}, 2009, Surficial Geology of Aurora South Quadrangle, DuPage, Kane, Kendall, and Will Counties, Illinois. Illinois State Geological Survey, 1:24,000. Two sheets.
+\end{thebibliography}
 %__________________________________________________________________________________________________________________
 % Posters and Presentations
 \section{Conference Participation}
-
-\textbf{Hodson, T.O.} and Powell, R.D. Grounding zone sediment accumulation and tidewater and ice shelf stability. 
-\textsl{International Glaciological Society}, International symposium on, 2015.
-
-\textbf{Hodson, T.O.} and Powell, R.D. Physical and chemical characteristics of the Subglacial Lake Whillans sediment cores, Whillans Ice Stream, West Antarctica
+\begin{thebibliography}{3}
+\bibitem{}\textbf{Hodson, T.O.} et al. Environment at the Grounding Zone of the Whillans Ice Stream-Ross Ice Shelf, West Antarctica.
+\textsl{American Geophysical Union}, Fall Meeting, 2015.
+\bibitem{}\textbf{Hodson, T.O.} and Powell, R.D. Grounding zone sediment accumulation and tidewater and ice shelf stability. 
+\textsl{International Glaciological Society}, International symposium on Glaciers and Ice Sheets in a Warming World, 2015.
+\bibitem{}\textbf{Hodson, T.O.} and Powell, R.D. Physical and chemical characteristics of the Subglacial Lake Whillans sediment cores, Whillans Ice Stream, West Antarctica
 \textsl{American Geophysical Union}, Fall Meeting, 2013.
-
-Powell, R.D. and \textbf{Hodson, T.O.} , 2013, Refining the retreat history of the Cordilleran Ice Sheet from marine records. Geophysical Research Abstracts, Vol. 15, EGU General Assembly 2013.
-
-Cochrane, G.R., \textbf{Hodson, T.O.}, et al. Use of the Coastal and Marine Ecological Classification Standard (CMECS) for Geological Studies in Glacier Bay, Alaska.
+\bibitem{}Powell, R.D. and \textbf{Hodson, T.O.} Refining the retreat history of the Cordilleran Ice Sheet from marine records. Geophysical Research Abstracts, Vol. 15, EGU General Assembly, 2013.
+\bibitem{}Cochrane, G.R., \textbf{Hodson, T.O.}, et al. Use of the Coastal and Marine Ecological Classification Standard (CMECS) for Geological Studies in Glacier Bay, Alaska.
 \textsl{American Geophysical Union}, Fall Meeting, 2012.
-
-\textbf{Hodson, T.O.} and Powell, R.D.  A deglacial chronology of the Glacier Bay Ice Stream, Southeast Alaska.
+\bibitem{}\textbf{Hodson, T.O.} and Powell, R.D. A deglacial chronology of the Glacier Bay Ice Stream, Southeast Alaska.
 \textsl{International Glaciological Society}, International symposium on glaciers and ice sheets in a warming climate, 2012.
-
-Powell, R.D. and \textbf{Hodson, T.O.} , 2011, Rapid Retreat of the Glacier Bay Ice Stream from the Last Glacial Maximum of the Cordilleran Ice Sheet, SE Alaska. Geophysical Research Abstracts, Vol. 13, EGU General Assembly 2011.
-
+\bibitem{}Powell, R.D. and \textbf{Hodson, T.O.} Rapid Retreat of the Glacier Bay Ice Stream from the Last Glacial Maximum of the Cordilleran Ice Sheet, SE Alaska. Geophysical Research Abstracts, Vol. 13, EGU General Assembly, 2011.
+\end{thebibliography}
