added isws info

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -2,12 +2,10 @@
 % Professional Experience
 \section{Professional Experience}
 
-
 \datedsubsection{Associate Field Coordinator, \textit{Illinois State Water Survey}}{2015--Present}
 \begin{itemize}
-\item Monitored stream  for NSF funded Critical Zone Observatory to quantify ** of Intensively Managed Landscapes 
-\item Maintained equipment and instrumentation at stream gaging stations
-\item XXXX
+\item Field technician and analyst for NSF funded Critical Zone Observatory investigating the sustainability of intensively managed landscapes. 
+\item Maintained stream gaging stations and developed stream rating curves. 
 \end{itemize}
 
 \datedsubsection{Webmapping Intern, \textit{City of Urbana}}{Fall, 2015}
