--- a/cv.tex
+++ b/cv.tex
@@ -13,7 +13,7 @@
 \input{sections/education.tex}
 \input{sections/experience.tex}
 \input{sections/publications.tex}
-\input{sections/fieldwork_s.tex}
+\input{sections/fieldwork.tex}
 
 \newpage
 
