tweaked isws and urbana

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -5,13 +5,12 @@
 \datedsubsection{Associate Field Coordinator, \textit{Illinois State Water Survey}}{2015--Present}
 \begin{itemize}
 \item Field technician and analyst for NSF funded Critical Zone Observatory investigating the sustainability of intensively managed landscapes. 
-\item Maintained stream gaging stations and developed stream rating curves. 
+\item Duties include maintaining stream gaging stations and developing data analysis software.
 \end{itemize}
 
-\datedsubsection{Webmapping Intern, \textit{City of Urbana}}{Fall, 2015}
+\datedsubsection{Webmapping Intern, \textit{Historic Preservation Commission, City of Urbana}}{Fall, 2015}
 \begin{itemize}
-\item Prepared an interactive webmap of historical buildings and architecture in the city of Urbana.
-\item Built custom webmap using Mapbox, Leaflet, JQuery, and BootstrapJS. 
+\item Built an interactive webmap of historical buildings in the city of Urbana using using Mapbox, Leaflet, JQuery, and BootstrapJS. 
 
 \end{itemize}
 
