--- a/sections/publications.tex
+++ b/sections/publications.tex
@@ -5,7 +5,7 @@
 \bibitem{}\textbf{Hodson, T.O.}, Powell, R.D, Mukucki, J., Scherer, R.P., et al. 
 \textsl{in prep}. Ocean influence on the Whillans Ice Stream Grounding Zone, Antarctica. 
 \bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep}. Subglacial streams drive rapid erosion and relief generation during glaciation.
-\bibitem{}\textbf{Hodson, T.O.}, , \textsl{submitted}. Physical processes in Subglacial Lake Whillans, West Antarctica.
+\bibitem{}\textbf{Hodson, T.O.}, et al., \textsl{submitted}. Physical processes in Subglacial Lake Whillans, West Antarctica.
 \textsl{Earth and Planetary Science Letters}.
 \bibitem{}Mikuki, J., et al., 2016, Subglacial Lake Whillans Biogeochemistry: A synthesis of current knowledge. \textsl{Phil. Trans. R. Soc. A}.
 \bibitem{}Vick-Majors, T.V., et al., 2015, Biogeochemistry and microbial diversity in the marine cavity beneath the McMurdo Ice Shelf, Antarctica.
