CV for disserationn completion award

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -2,19 +2,19 @@
 % Professional Experience
 \section{Professional Experience}
 
-\datedsubsection{Associate Field Coordinator, \textit{Illinois State Water Survey}}{2015--Present}
+\datedsubsection{\textbf{Academic Hourly}, \textit{Illinois State Water Survey}}{2015--Present}
 \begin{itemize}
-\item Field technician and analyst for NSF funded Critical Zone Observatory investigating the sustainability of intensively managed landscapes. 
-\item Duties include maintaining stream gaging stations and developing data analysis software.
+\item Field coordinator for NSF funded Critical Zone Observatory investigating the sustainability of intensively managed landscapes. 
+  Duties include maintaining stream gaging stations, data aquisition and processing. 
 \end{itemize}
 
-\datedsubsection{Webmapping Intern, \textit{Historic Preservation Commission, City of Urbana}}{Fall, 2015}
+\datedsubsection{\textbf{Webmapping Intern}, \textit{Historic Preservation Commission, City of Urbana}}{Fall, 2015}
 \begin{itemize}
-\item Built an interactive webmap of historical buildings in the city of Urbana using using Mapbox, Leaflet, JQuery, and BootstrapJS. 
+\item Built an interactive webmap of historical buildings in the city of Urbana. 
 
 \end{itemize}
 
-\datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--2015}
+\datedsubsection{\textbf{Research Assistant}, \textit{Northern Illinois University}}{2010--2015}
 \begin{itemize}
 \item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an
   integrative study to explore aquatic environments beneath the Antarctic Ice
@@ -33,19 +33,19 @@
   
 \end{itemize}
 
-\datedsubsection{Mapping Intern, \textit{UCAR}}{August,2014}
+\datedsubsection{\textbf{Mapping Intern}, \textit{UCAR}}{August,2014}
 \begin{itemize}
 \item \href{http://www.niutoday.info/2014/04/17/niu-student-lands-coveted-internship-aboard-exploration-ship/}
   {Sailed as a survey watchstander aboard NOAA's \textit{E/V Okeanos Explorer}.
   Duties included QA and processing of data collected by the ship's swath and sub-bottom sonars.}
 \end{itemize}
 
-\datedsubsection{Teaching Assistant, \textit{Northern Illinois University}}{2010--2011}
+\datedsubsection{\textbf{Teaching Assistant}, \textit{Northern Illinois University}}{2010--2011}
 \begin{itemize}
 \item Teaching assistant for courses in sedimentology, paleontology, and planetary science.
 \end{itemize}
 
-\datedsubsection{Academic Hourly, \textit{Illinois State Geological Survey}}{2008--2009}
+\datedsubsection{\textbf{Academic Hourly}, \textit{Illinois State Geological Survey}}{2008--2009}
 \begin{itemize}
 \item \href{http://www.isgs.illinois.edu/sites/isgs/files/maps/isgs-quads/aurora-south-sg.pdf}{Prepared geologic maps from LIDAR data, drill cores and satellite imagery.}
 \item Conducted fieldwork around Illinois including geophysical surveying, geologic drilling, and well logging for watershed and aquifer characterization. 
