--- a/sections/fieldwork.tex
+++ b/sections/fieldwork.tex
@@ -1,8 +1,9 @@
 %__________________________________________________________________________________________________________________
 % Fieldwork
 \section{Fieldwork} 
-\textbf{Whillans Ice Stream, Grounding Zone} \hfill \textbf{2015}\\
-Deployed instruments and recovered sediment cores beneath the Ross Ice Shelf.
+
+\textbf{Whillans Ice Stream, Antarctica} \hfill \textbf{2015}\\
+Deployed instruments and recovered sediment cores beneath the Ross Ice Shelf. \\
 
 \textbf{New England Seamount Chain, North Atlantic} \hfill \textbf{2014}\\
 Mapped seafloor off the coast of Rhode Island during Okeanos Explorer expedition EX1404 Leg 1. \\
