--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,7 +1,7 @@
 %__________________________________________________________________________________________________________________
 % EDUCATION
 \section{Education}
-\datedsubsection{\textbf{PhD student in Geology} \textit{-- Northern Illinois University}}{expected 2017}
+\datedsubsection{\textbf{PhD Candidate in Geology} \textit{-- Northern Illinois University}}{expected 2017}
 \datedsubsection{\href{http://www.niu.edu/geog/giscert/graduate_certificate.shtml}{Certificate of Graduate Study in Geographic Information Analysis}}{2014}
 \datedsubsection{\href{http://gradworks.umi.com/15/28/1528822.html}{\textbf{MS Geology} \textit{-- Northern Illinois University}}}{2012}
 \datedsubsection{\textbf{BS Geology and Geophysics} \textit{-- University of Wisconsin, Madison}}{2007}
