--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -10,7 +10,7 @@
 
 \datedsubsection{\textbf{Webmapping Intern}, \textit{Historic Preservation Commission, City of Urbana}}{Fall, 2015}
 \begin{itemize}
-\item Built an interactive webmap of historical buildings in the city of Urbana. 
+\item Built an interactive webmap of historical buildings in the city of Urbana using Mapbox, Leaflet, and Bootstrap. 
 
 \end{itemize}
 
