--- a/cv.tex
+++ b/cv.tex
@@ -14,7 +14,8 @@
 \input{sections/experience.tex}
 \input{sections/publications.tex}
 \input{sections/fieldwork.tex}
-
+\input{sections/software.tex}
+\input{sections/organizations.tex}
 \newpage
 
 \end{document} 
