--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -5,7 +5,7 @@
 \datedsubsection{\textbf{Academic Hourly}, \textit{Illinois State Water Survey}}{2015--Present}
 \begin{itemize}
 \item Field coordinator for NSF funded Critical Zone Observatory investigating the sustainability of intensively managed landscapes. 
-  Duties include maintaining stream gaging stations, data aquisition and processing. 
+  Duties include maintaining field sensors, dataloggers and automatic samplers for hydrologic and environmental monitoring.
 \end{itemize}
 
 \datedsubsection{\textbf{Webmapping Intern}, \textit{Historic Preservation Commission, City of Urbana}}{Fall, 2015}
@@ -22,7 +22,7 @@
   \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}
        {Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.} Helped in developing data acquisition software and sensor integration.
        Other duties included maintenance and operation of oceanographic instruments and operational equipment,
-       report writing, organizing purchase and shipment of field supplies and equipment.
+       report writing, purchasing and shipping of field supplies and equipment.
   
 \item Mapped seafloor habitats and geology of Puget Sound as part of The Nature
   Conservancy's initiative to foster public awareness and conservation of marine
