--- a/sections/publications.tex
+++ b/sections/publications.tex
@@ -2,10 +2,10 @@
 % Journal Publications
 \renewcommand{\refname}{Publications}
 \begin{thebibliography}{1}
-\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D, Mukucki, J., Scherer, R.P., et al. 
-\textsl{in prep}. Ocean influence on the Whillans Ice Stream Grounding Zone, Antarctica. 
-\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep}. Subglacial streams drive rapid erosion and relief generation during glaciation.
-\bibitem{}\textbf{Hodson, T.O.}, et al., \textsl{submitted}. Physical processes in Subglacial Lake Whillans, West Antarctica.
+%\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D, Mukucki, J., Scherer, R.P., et al. 
+%\textsl{in prep}. Ocean influence on the Whillans Ice Stream Grounding Zone, Antarctica. 
+\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{submitted to Geology}. Rapid glacial erosion associated with high subglacial runoff.
+\bibitem{}\textbf{Hodson, T.O.}, et al., 2016. Physical processes in Subglacial Lake Whillans, West Antarctica: Inferences from sediment cores.
 \textsl{Earth and Planetary Science Letters}.
 \bibitem{}Mikuki, J., et al., 2016, Subglacial Lake Whillans Biogeochemistry: A synthesis of current knowledge. \textsl{Phil. Trans. R. Soc. A}.
 \bibitem{}Vick-Majors, T.V., et al., 2015, Biogeochemistry and microbial diversity in the marine cavity beneath the McMurdo Ice Shelf, Antarctica.
@@ -18,8 +18,8 @@
 \renewcommand{\refname}{Other Publications}
 \begin{thebibliography}{1}
 \bibitem{}Cochrane, G.R., et al., 2015. Southern Salish Sea Habitat Map Series: Admiralty Inlet: U.S. Geological Survey Open-File Report 1073.
-\bibitem{}\textbf{Hodson, T.O.}, Cochrane, G.R., and Powell, R.D., 2013, Marine benthic habitat mapping of the West Arm, Glacier Bay National Park and Preserve, Alaska: U.S. Geological Survey Scientific Investigations Map 3253, pamphlet 29 p., 4 sheets, scale 1:50,000, http://pubs.usgs.gov/sim/3253/.
-\bibitem{}Curry, B.B. and \textbf{Hodson, T.O.}, 2009, Surficial Geology of Aurora South Quadrangle, DuPage, Kane, Kendall, and Will Counties, Illinois. Illinois State Geological Survey, 1:24,000. Two sheets.
+\bibitem{}\textbf{Hodson, T.O.}, Cochrane, G.R., and Powell, R.D., 2013, Marine benthic habitat mapping of the West Arm, Glacier Bay National Park and Preserve, Alaska: U.S. Geological Survey Scientific Investigations Map 3253.
+\bibitem{}Curry, B.B. and \textbf{Hodson, T.O.}, 2009, Surficial Geology of Aurora South Quadrangle, DuPage, Kane, Kendall, and Will Counties, Illinois. Illinois State Geological Survey.
 \end{thebibliography}
 %__________________________________________________________________________________________________________________
 % Posters and Presentations
