--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -2,34 +2,22 @@
 % Professional Experience
 \section{Professional Experience}
 
-\datedsubsection{\textbf{Academic Hourly}, \textit{Illinois State Water Survey}}{2015--Present}
+\datedsubsection{\textbf{Academic Hourly}, \textit{Illinois State Water Survey - University of Illinois}}{2015--Present}
 \begin{itemize}
-\item Field coordinator for NSF funded Critical Zone Observatory investigating the sustainability of intensively managed landscapes. 
+\item Field coordinator for NSF funded Critical Zone Observatory investigating the sustainability of intensively managed agriculture in the Midwestern United States. 
   Duties include maintaining field sensors, dataloggers and automatic samplers for hydrologic and environmental monitoring.
-\end{itemize}
-
-\datedsubsection{\textbf{Webmapping Intern}, \textit{Historic Preservation Commission, City of Urbana}}{Fall, 2015}
-\begin{itemize}
-\item Built an interactive webmap of historical buildings in the city of Urbana using Mapbox, Leaflet, and Bootstrap. 
-
 \end{itemize}
 
 \datedsubsection{\textbf{Research Assistant}, \textit{Northern Illinois University}}{2010--2015}
 \begin{itemize}
-\item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an
-  integrative study to explore aquatic environments beneath the Antarctic Ice
-  Sheet.}
-  \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}
-       {Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.} Helped in developing data acquisition software and sensor integration.
-       Other duties included maintenance and operation of oceanographic instruments and operational equipment,
-       report writing, purchasing and shipping of field supplies and equipment.
-  
-\item Mapped seafloor habitats and geology of Puget Sound as part of The Nature
+\item Researcher and technician for WISSARD, an NSF funded study to explore aquatic environments beneath the Antarctic Ice
+  Sheet. During the project I worked extensively alongside project engineers and scientists in coordinating/implementing field operations, data acquisition and sensor integration for the SIR, IPSIE and percussion corer. 
+\item Mapped seafloor habitats and geology of Puget Sound from swath bathymetry and ROV observations as part of The Nature
   Conservancy's initiative to foster public awareness and conservation of marine
   environments. Resulting mapsets in publication with USGS.
 
 \item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geology
-  of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a supervised classifier. Resulting report and map set published by USGS.}
+  of Glacier Bay National Park from swath bathymetry; ROV and camera sled seafloor observations, and a supervised classifier. Resulting report and map set published by USGS.}
   
 \end{itemize}
 
