--- a/sections/fieldwork.tex
+++ b/sections/fieldwork.tex
@@ -1,30 +1,27 @@
 %__________________________________________________________________________________________________________________
 % Fieldwork
 \section{Fieldwork} 
-
-\textbf{Whillans Ice Stream, Antarctica} \hfill \textbf{2015}\\
+\textbf{Whillans Ice Stream Grounding Zone, Antarctica} \hfill \textbf{2015}\\
+\vspace{2mm}
 Deployed instruments and recovered sediment cores beneath the Ross Ice Shelf. \\
-
+\vspace{2mm}
 \textbf{New England Seamount Chain, North Atlantic} \hfill \textbf{2014}\\
 Mapped seafloor off the coast of Rhode Island during Okeanos Explorer expedition EX1404 Leg 1. \\
-
+\vspace{2mm}
 \textbf{Lake Tahoe, California} \hfill \textbf{2013}\\
-Sea trials of the SIR, a ROV designed for exploration and surveying beneath ice shelves.\\
-
-\textbf{Whillans Ice Stream, Antarctica} \hfill \textbf{2013}\\
+Sea trials of the SIR, a ROV designed for exploration and surveying beneath ice shelves. \\
+\vspace{2mm}
+\textbf{Subglacial Lake Whillans, Antarctica} \hfill \textbf{2013}\\
 Deployed instruments into and recovered sediment cores from an Antarctic lake beneath 800m of ice.\\
-
+\vspace{2mm}
 \textbf{Windless Bight, Antarctica} \hfill \textbf{2012}\\
-Field tests for instruments, launch and recovery system, and hot water drill prior to deployment into the deep field.\\
-
+Field tests for IPSIE, percussion corer, launch and recovery system, and hot water drill prior to deployment into the deep field.\\
+\vspace{2mm}
 \textbf{Lake Tahoe, California} \hfill \textbf{2012}\\
-Sea trials of the IPSIE, a sensor array designed to study the physical and chemical properties of aquatic systems beneath ice sheets and ice shelves.\\
-
-\textbf{DeKalb County, Illinois} \hfill \textbf{2009}\\
-Field course on near-surface geophysical methods.\\
-
+Sea trials of the IPSIE, a sensor array designed to study the physical and chemical properties of aquatic systems beneath ice sheets and ice shelves. \\
+\vspace{2mm}
 \textbf{Glacier Bay, Alaska} \hfill \textbf{2010}\\
 Groundtruthing investigations for seafloor habitat mapping using camera sled and ROV.\\
-
+\vspace{2mm}
 \textbf{Illinois (statewide)} \hfill \textbf{2009}\\
 Stratigraphic drilling, monitoring well installation, and geophysical surveys for aquifer characterization and surficial mapping. \\
