--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -10,8 +10,8 @@
 
 \datedsubsection{\textbf{Research Assistant}, \textit{Northern Illinois University}}{2010--2015}
 \begin{itemize}
-\item Researcher and technician for WISSARD, an NSF funded study to explore aquatic environments beneath the Antarctic Ice
-  Sheet. During the project I worked extensively alongside project engineers and scientists in coordinating/implementing field operations, data acquisition and sensor integration for the SIR, IPSIE and percussion corer. 
+\item Researcher and technician for WISSARD, a NSF funded study to explore aquatic environments beneath the Antarctic Ice
+  Sheet. During the project I worked extensively alongside project engineers and scientists in coordinating/implementing field operations, data acquisition, fabrication and sensor integration for the SIR, IPSIE and percussion corer. 
 \item Mapped seafloor habitats and geology of Puget Sound from swath bathymetry and ROV observations as part of The Nature
   Conservancy's initiative to foster public awareness and conservation of marine
   environments. Resulting mapsets in publication with USGS.
