added pubs but need awards

--- a/sections/awards.tex
+++ b/sections/awards.tex
@@ -1,1 +1,5 @@
-Dissertation completion award 2016 14000
+\section{awards}
+\begin{itemize}
+\item
+Dissertation Completion Fellowship 2016 14000
+\end{itemize}
