--- a/sections/publications.tex
+++ b/sections/publications.tex
@@ -13,4 +13,29 @@
 \bibitem{}Christner, B.C., et al., 2014, A microbial ecosystem beneath the West Antarctic ice sheet. \textsl{Nature}.
 \bibitem{}Tulaczyk, S, et al., 2014, WISSARD at Subglacial Lake Whillans, West Antarctica: scientific operations and initial observations. \textsl{Annals of Glaciology}
 \end{thebibliography}
+%__________________________________________________________________________________________________________________
+% Other Publications
+\renewcommand{\refname}{Other Publications}
+\begin{thebibliography}{1}
+\bibitem{}Cochrane, G.R., et al., 2015. Southern Salish Sea Habitat Map Series: Admiralty Inlet: U.S. Geological Survey Open-File Report 1073.
+\bibitem{}\textbf{Hodson, T.O.}, Cochrane, G.R., and Powell, R.D., 2013, Marine benthic habitat mapping of the West Arm, Glacier Bay National Park and Preserve, Alaska: U.S. Geological Survey Scientific Investigations Map 3253.
+\bibitem{}Curry, B.B. and \textbf{Hodson, T.O.}, 2009, Surficial Geology of Aurora South Quadrangle, DuPage, Kane, Kendall, and Will Counties, Illinois. Illinois State Geological Survey.
+\end{thebibliography}
+%__________________________________________________________________________________________________________________
+% Posters and Presentations
 
+\renewcommand{\refname}{Conference Participation}
+\begin{thebibliography}{3}
+\bibitem{}\textbf{Hodson, T.O.} et al. Environment at the Grounding Zone of the Whillans Ice Stream-Ross Ice Shelf, West Antarctica.
+\textsl{American Geophysical Union}, Fall Meeting, 2015.
+\bibitem{}\textbf{Hodson, T.O.} and Powell, R.D. Grounding zone sediment accumulation and tidewater and ice shelf stability. 
+\textsl{International Glaciological Society}, International symposium on Glaciers and Ice Sheets in a Warming World, 2015.
+\bibitem{}\textbf{Hodson, T.O.} and Powell, R.D. Physical and chemical characteristics of the Subglacial Lake Whillans sediment cores, Whillans Ice Stream, West Antarctica
+\textsl{American Geophysical Union}, Fall Meeting, 2013.
+\bibitem{}Powell, R.D. and \textbf{Hodson, T.O.} Refining the retreat history of the Cordilleran Ice Sheet from marine records. Geophysical Research Abstracts, Vol. 15, EGU General Assembly, 2013.
+\bibitem{}Cochrane, G.R., \textbf{Hodson, T.O.}, et al. Use of the Coastal and Marine Ecological Classification Standard (CMECS) for Geological Studies in Glacier Bay, Alaska.
+\textsl{American Geophysical Union}, Fall Meeting, 2012.
+\bibitem{}\textbf{Hodson, T.O.} and Powell, R.D. A deglacial chronology of the Glacier Bay Ice Stream, Southeast Alaska.
+\textsl{International Glaciological Society}, International symposium on glaciers and ice sheets in a warming climate, 2012.
+\bibitem{}Powell, R.D. and \textbf{Hodson, T.O.} Rapid Retreat of the Glacier Bay Ice Stream from the Last Glacial Maximum of the Cordilleran Ice Sheet, SE Alaska. Geophysical Research Abstracts, Vol. 13, EGU General Assembly, 2011.
+\end{thebibliography}
