--- a/sections/awards.tex
+++ b/sections/awards.tex
@@ -1,5 +1,6 @@
 \section{awards}
 \begin{itemize}
-\item
-Dissertation Completion Fellowship 2016 14000
+\item Dissertation Completion Fellowship \textendash \$14000
+\item Goldich Fund Awards \textendash \$1500
+\item Graduate Travel Grants \textendash \$300
 \end{itemize}
