--- a/cv.tex
+++ b/cv.tex
@@ -13,8 +13,9 @@
 \input{sections/education.tex}
 \input{sections/experience.tex}
 \input{sections/publications.tex}
-\input{sections/fieldwork.tex}
-\input{sections/software.tex}
+%\input{sections/fieldwork.tex}
+\input{sections/awards.tex}
+%\input{sections/software.tex}
 \newpage
 
 \end{document} 
