--- a/sections/header_small.tex
+++ b/sections/header_small.tex
@@ -1,4 +1,5 @@
+
 \smallname{Timothy O. Hodson}
-\shortcontact{tohodson@gmail.com}{(217) 493-5551}
-\vspace{-0.2cm}
-\centerline{\footnotesize{[digital version of this document embeds links]}}
+%\shortcontact{tohodson@gmail.com}{(217) 493-5551}
+%\vspace{-0.2cm}
+%\centerline{\footnotesize{[digital version of this document %mbeds links]}}
