--- a/sections/publications.tex
+++ b/sections/publications.tex
@@ -2,9 +2,10 @@
 % Journal Publications
 \renewcommand{\refname}{Publications}
 \begin{thebibliography}{1}
-%\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D, Mukucki, J., Scherer, R.P., et al. 
-%\textsl{in prep}. Ocean influence on the Whillans Ice Stream Grounding Zone, Antarctica. 
-\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{submitted to Geology}. Rapid glacial erosion associated with high subglacial runoff.
+\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep.}. Rapid glacial erosion associated with high runoff.
+\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep.}. Seismic stratigraphy of the Yakobi Sea Valley, Alaska: Retreat history of the Cordilleran Ice Sheet.
+\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D, Branecky, C., Scherer, R.P, Mukucki, J., et al. 
+\textsl{submitted}. Largest Antarctic ice shelf vulnerable to ocean regime shift.
 \bibitem{}\textbf{Hodson, T.O.}, et al., 2016. Physical processes in Subglacial Lake Whillans, West Antarctica: Inferences from sediment cores.
 \textsl{Earth and Planetary Science Letters}.
 \bibitem{}Mikuki, J., et al., 2016, Subglacial Lake Whillans Biogeochemistry: A synthesis of current knowledge. \textsl{Phil. Trans. R. Soc. A}.
