--- a/cv_TOH.cls
+++ b/cv_TOH.cls
@@ -39,7 +39,7 @@
 \setlength{\topsep}{0pt}
 \setlength{\partopsep}{0pt}
 \setlength{\parindent}{0pt}
-
+%\setlength{\parskip}{0.3pt}
 \newcommand\VRule{\color{lightgray}\vrule width 0.5pt}
 %\newfontfamily\headingfont[]{Armata}
 
