added short experience and google scholar profile

--- a/sections/awards.tex
+++ b/sections/awards.tex
@@ -1,6 +1,6 @@
-\section{awards}
+\section{Awards and Fellowships}
 \begin{itemize}
-\item Dissertation Completion Fellowship \textendash \$14000
-\item Goldich Fund Awards \textendash \$1500
-\item Graduate Travel Grants \textendash \$300
+    \item Dissertation Completion Fellowship (\$14000)
+    \item Goldich Fund Awards (\$1500)
+    \item Graduate Travel Grants (\$300)
 \end{itemize}
