--- a/sections/fieldwork.tex
+++ b/sections/fieldwork.tex
@@ -1,6 +1,9 @@
 %__________________________________________________________________________________________________________________
 % Fieldwork
 \section{Fieldwork} 
+\textbf{Central Pacific Ocean} \hfill \textbf{2016}\\
+UNOLS chief scientist training cruise aboard RV Sikuliaq.
+\vspace{2mm}
 \textbf{Whillans Ice Stream Grounding Zone, Antarctica} \hfill \textbf{2015}\\
 Deployed instruments and recovered sediment cores beneath the Ross Ice Shelf. \\
 \vspace{2mm}
