--- a/sections/publications.tex
+++ b/sections/publications.tex
@@ -1,18 +1,18 @@
 %__________________________________________________________________________________________________________________
 % Journal Publications
-\renewcommand{\refname}{Publications}
+\renewcommand{\refname}{Journal Publications} 
+(\href{https://scholar.google.com/citations?user=3odnPwwAAAAJ&hl=en}{Google Scholar profile})
 \begin{thebibliography}{1}
-\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep.}. Rapid glacial erosion associated with high runoff.
-\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep.}. Seismic stratigraphy of the Yakobi Sea Valley, Alaska: Retreat history of the Cordilleran Ice Sheet.
+\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D., Scherer, R.P., Tulaczyk \textsl{in prep.}. Sedimentary processes at a modern Antarctic grounding zone.
+\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep.}. Runoff as first order control on glacial erosion driven.
+\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep.}. Coastal collapse of the Cordilleran Ice Sheet preceding Meltwater Pulse 1A.
 \bibitem{}\textbf{Hodson, T.O.}, Powell, R.D, Branecky, C., Scherer, R.P, Mukucki, J., et al. 
-\textsl{submitted}. Largest Antarctic ice shelf vulnerable to ocean regime shift.
-\bibitem{}\textbf{Hodson, T.O.}, et al., 2016. Physical processes in Subglacial Lake Whillans, West Antarctica: Inferences from sediment cores.
+    \textsl{in review}. Increasing West Antarctic Ice Sheet vulnerability to ocean warming under the Ross Ice Shelf. \textsl{Nature Communications}
+\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D., Brachfeld, S.A., Tulaczyk, S., et al., 2016. Physical processes in Subglacial Lake Whillans, West Antarctica: Inferences from sediment cores.
 \textsl{Earth and Planetary Science Letters}.
 \bibitem{}Mikuki, J., et al., 2016, Subglacial Lake Whillans Biogeochemistry: A synthesis of current knowledge. \textsl{Phil. Trans. R. Soc. A}.
 \bibitem{}Vick-Majors, T.V., et al., 2015, Biogeochemistry and microbial diversity in the marine cavity beneath the McMurdo Ice Shelf, Antarctica.
 \textsl{Limnology and Oceanography}.
-\bibitem{}Christner, B.C., et al., 2014, A microbial ecosystem beneath the West Antarctic ice sheet. \textsl{Nature}.
-\bibitem{}Tulaczyk, S, et al., 2014, WISSARD at Subglacial Lake Whillans, West Antarctica: scientific operations and initial observations. \textsl{Annals of Glaciology}
 \end{thebibliography}
 %__________________________________________________________________________________________________________________
 % Other Publications
