--- a/cv.tex
+++ b/cv.tex
@@ -11,7 +11,7 @@
 \input{sections/header.tex}
 
 \input{sections/education.tex}
-\input{sections/experience.tex}
+\input{sections/experience_short.tex}
 \input{sections/publications.tex}
 \input{sections/fieldwork.tex}
 \input{sections/awards.tex}
