--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -2,7 +2,7 @@
 % Professional Experience
 \section{Professional Experience}
 
-\datedsubsection{\textbf{Academic Hourly}, \textit{Illinois State Water Survey - University of Illinois}}{2015--Present}
+\datedsubsection{\textbf{Academic Hourly}, \textit{Illinois State Water Survey}}{2015--Present}
 \begin{itemize}
 \item Field coordinator for NSF funded Critical Zone Observatory investigating the sustainability of intensively managed agriculture. 
   Duties include maintaining field sensors, dataloggers and automatic samplers for hydrologic and environmental monitoring.
