--- a/sections/header.tex
+++ b/sections/header.tex
@@ -1,3 +1,5 @@
 \centerline{\scshape\LARGE{Timothy O Hodson}}
 \shortcontact{tohodson@gmail.com}{}
+\large\textperiodcentered{tohodson@gmail.com}
+\large\textperiodcentered{(217)-493-5551}
 \vspace{-0.2cm}
