--- a/sections/fieldwork.tex
+++ b/sections/fieldwork.tex
@@ -2,7 +2,7 @@
 % Fieldwork
 \section{Fieldwork} 
 \textbf{Central Pacific Ocean} \hfill \textbf{2016}\\
-UNOLS chief scientist training cruise aboard RV Sikuliaq.
+UNOLS chief scientist training cruise aboard RV Sikuliaq. \\
 \vspace{2mm}
 \textbf{Whillans Ice Stream Grounding Zone, Antarctica} \hfill \textbf{2015}\\
 Deployed instruments and recovered sediment cores beneath the Ross Ice Shelf. \\
