--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,8 +1,12 @@
 %__________________________________________________________________________________________________________________
 % EDUCATION
-\section{Education}
-\datedsubsection{\textbf{PhD Candidate in Geology} \textit{-- Northern Illinois University}}{expected 2017}
-\quad Advisor: Ross D. Powell
-\datedsubsection{\href{http://www.niu.edu/geog/giscert/graduate_certificate.shtml}{Certificate of Graduate Study in Geographic Information Analysis}}{2014}
-\datedsubsection{\href{http://gradworks.umi.com/15/28/1528822.html}{\textbf{MS Geology} \textit{-- Northern Illinois University}}}{2012}
-\datedsubsection{\textbf{BS Geology and Geophysics} \textit{-- University of Wisconsin, Madison}}{2007}
+\begin{cvlist}{Education}
+
+\item[2017] PhD Candidate in Geology -- Northern Illinois University.
+\item[2014] Graduate certificate in geospatial analysis 
+\item[2012] MS in Geology -- Northern Illinois University
+\item[2007] BS Geology and Geophysics -- University of Wisconsin, Madison.
+
+\end{cvlist}
+
+ 
