--- a/sections/header.tex
+++ b/sections/header.tex
@@ -1,5 +1,13 @@
-\centerline{\scshape\LARGE{Timothy O Hodson}}
-\shortcontact{tohodson@gmail.com}{}
-\large\textperiodcentered{tohodson@gmail.com}
-\large\textperiodcentered{(217)-493-5551}
-\vspace{-0.2cm}
+\begin{cvlist}{}
+
+\item
+\begin{minipage}[t]{2.2in}
+        Timothy O. Hodson\\ 
+        PhD Candidate\\
+\end{minipage} \hfill
+\begin{minipage}[t]{3in}
+        email: \href{mailto:tohodson@gmail.com}{tohodson@gmail.com}\\
+        cell: (217)-493-5551
+\end{minipage}
+
+\end{cvlist}
