--- a/sections/experience_short.tex
+++ b/sections/experience_short.tex
@@ -1,13 +1,15 @@
 %__________________________________________________________________________________________________________________
 % Professional Experience
-\section{Professional Experience}
+\begin{cvlist}{Experience}
 
-\datedsubsection{\textbf{Associate Field Coordinator}, \textit{Illinois State Water Survey - University of Illinois}}{2015--Present}
+\item[2015--2016] Associate Field Coordinator, Illinois State Water Survey.
 
-\datedsubsection{\textbf{Research Assistant}, \textit{Northern Illinois University}}{2010--2015}
+\item[2010--2015] Research Assistant, Northern Illinois University.
 
-\datedsubsection{\textbf{Mapping Intern}, \textit{UCAR}}{August,2014}
+\item[8/2014] Mapping Intern, UCAR.
 
-\datedsubsection{\textbf{Teaching Assistant}, \textit{Northern Illinois University}}{2010--2011}
+\item[2010--2011] Teaching Assistant, Northern Illinois University.
 
-\datedsubsection{\textbf{Academic Hourly}, \textit{Illinois State Geological Survey}}{2008--2009}
+\item[2008-2009] Academic Hourly, Illinois State Geological Survey.
+
+\end{cvlist}
