--- a/cv.tex
+++ b/cv.tex
@@ -26,8 +26,8 @@
 \input{sections/education.tex}
 %\input{sections/experience_short.tex}
 %\input{sections/publications.tex}
-%\input{sections/fieldwork.tex}
-%\input{sections/awards.tex}
+\input{sections/fieldwork.tex}
+\input{sections/awards.tex}
 %\input{sections/software.tex}
 
 \end{cv}
