--- a/sections/awards.tex
+++ b/sections/awards.tex
@@ -1,6 +1,6 @@
-\section{Awards and Fellowships}
-\begin{itemize}
+\section{Awards \& Honors}
+\begin{cvlist}
     \item Dissertation Completion Fellowship (\$14000)
     \item Goldich Fund Awards (\$1500)
     \item Graduate Travel Grants (\$300)
-\end{itemize}
+\end{cvlist}
