--- a/sections/experience_short.tex
+++ b/sections/experience_short.tex
@@ -1,13 +1,10 @@
 %__________________________________________________________________________________________________________________
 % Professional Experience
-\section{Professional Experience}
+\begin{cvlist}{Professional Experience}
 
-\datedsubsection{\textbf{Associate Field Coordinator}, \textit{Illinois State Water Survey - University of Illinois}}{2015--Present}
-
-\datedsubsection{\textbf{Research Assistant}, \textit{Northern Illinois University}}{2010--2015}
-
-\datedsubsection{\textbf{Mapping Intern}, \textit{UCAR}}{August,2014}
-
-\datedsubsection{\textbf{Teaching Assistant}, \textit{Northern Illinois University}}{2010--2011}
-
-\datedsubsection{\textbf{Academic Hourly}, \textit{Illinois State Geological Survey}}{2008--2009}
+        \item[2015--present] Associate Field Coordinator, Illinois State Water Survey
+        \item[2010--2015] Research Assistant, Northern Illinois University
+        \item[August, 2014] Mapping Intern, UCAR
+        \item[2010--2011] Teaching Assistant, Northern Illinois University
+        \item[2008--2009] Academic Hourly, Illinois State Geological Survey
+\end{cvlist}
