--- a/sections/software.tex
+++ b/sections/software.tex
@@ -1,9 +1,8 @@
-\section{Programming and Software Experience}
-\begin{itemize}
+\begin{cvlist}{Programming and Software Experience}
 \item Python, BASH, C, Matlab, R, JavaScript, SQL, HTML/CSS
 \item Experience programming Campbell Scientific dataloggers. 
 \item Coursework in geospatial methods and modeling, web applications, and network applications in C.
 \item Familiar with common libraries for numerical programming, data viz,
   web mapping, geospatial analysis, signal processing, statistics, network communications, and data archival. 
 \item ArcGIS (4yrs), Adobe Illustrator, QGIS (3yrs), GRASS, GMT, FreeCAD, Fledermaus, Microsoft Office, Unix utilities
-\end{itemize}
+\end{cvlist}
