--- a/sections/awards.tex
+++ b/sections/awards.tex
@@ -1,5 +1,4 @@
-\section{Awards \& Honors}
-\begin{cvlist}
+\begin{cvlist}{Awards \& Honors}
     \item Dissertation Completion Fellowship (\$14000)
     \item Goldich Fund Awards (\$1500)
     \item Graduate Travel Grants (\$300)
