--- a/sections/fieldwork.tex
+++ b/sections/fieldwork.tex
@@ -2,32 +2,34 @@
 % Fieldwork
 \begin{cvlist}{Fieldwork} 
 
-\item[2016] Central Pacific Ocean \\
-UNOLS chief scientist training cruise aboard RV Sikuliaq. \\
+\item[2016] R/V Sikuliaq, Central Pacific\\
+    UNOLS chief scientist training cruise aboard RV Sikuliaq.
+
+\item[2015--2016] Illinois (Statewide)\\
+    TODO CZO description here
 
 \item[2015] Whillans Ice Stream Grounding Zone, Antarctica \\
-Deployed instruments and recovered sediment cores beneath the Ross Ice Shelf. \\
+    Deployed instruments and recovered sediment cores beneath the Ross Ice Shelf.
 
-\item[2014] New England Seamount Chain, North Atlantic \\
-Mapped seafloor off the coast of Rhode Island during Okeanos Explorer expedition EX1404 Leg 1. \\
+\item[2014] E/V Okeanos Explorer, North Atlantic \\
+    Mapped New England Seamount Chain off the coast of Rhode Island.
 
-%\vspace{2mm}
-%\textbf{Lake Tahoe, California} \hfill \textbf{2013}\\
-%Sea trials of the SIR, a ROV designed for exploration and surveying beneath ice shelves. \\
-%\vspace{2mm}
-%\textbf{Subglacial Lake Whillans, Antarctica} \hfill \textbf{2013}\\
-%Deployed instruments into and recovered sediment cores from an Antarctic lake beneath 800m of ice.\\
-%\vspace{2mm}
-%\textbf{Windless Bight, Antarctica} \hfill \textbf{2012}\\
-%Field tests for IPSIE, percussion corer, launch and recovery system, and hot water drill prior to deployment into the deep field.\\
-%\vspace{2mm}
-%\textbf{Lake Tahoe, California} \hfill \textbf{2012}\\
-%Sea trials of the IPSIE, a sensor array designed to study the physical and chemical properties of aquatic systems beneath ice sheets and ice shelves. \\
-%\vspace{2mm}
-%\textbf{Glacier Bay, Alaska} \hfill \textbf{2010}\\
-%Groundtruthing investigations for seafloor habitat mapping using camera sled and ROV.\\
-%\vspace{2mm}
-%\textbf{Illinois (statewide)} \hfill \textbf{2009}\\
-%Stratigraphic drilling, monitoring well installation, and geophysical surveys for aquifer characterization and surficial mapping. \\
+\item[2013] Lake Tahoe, California \\
+    Sea trials of ROV designed for exploring the ocean cavities beneath ice shelves.
+
+\item[2013] Subglacial Lake Whillans, Antarctica \\
+    Deployed instruments into and recovered sediment cores from an Antarctic lake beneath 800m of ice.
+
+\item[2012] Windless Bight, Antarctica \\
+    Test deployment of subglacial sensor array and percussion corer.
+
+\item[2012] Lake Tahoe, California\\
+    Test deployment of a sensor array designed to study aquatic environments beneath ice sheets.
+
+\item[2010] R/V Stellar, Glacier Bay, Alaska \\
+    Groundtruthing investigations for seafloor habitat mapping using camera sled and ROV.
+
+\item[2008--2009] Illinois (Statewide)\\
+    Stratigraphic drilling, monitoring well installation, and geophysical surveys for aquifer characterization and surficial mapping. 
 
 \end{cvlist}
