--- a/sections/fieldwork_s.tex
+++ b/sections/fieldwork_s.tex
@@ -1,12 +1,16 @@
 %__________________________________________________________________________________________________________________
 % Fieldwork
-\section{Fieldwork} 
+\begin{cvlist}{Fieldwork} 
 
-\textbf{Whillans Ice Stream Grounding Zone, Antarctica} \hfill \textbf{2015}
-\textbf{Lake Tahoe, California} \hfill \textbf{2013}\\
-\textbf{Subglacial Lake Whillans, Antarctica} \hfill \textbf{2013}\\
-\textbf{Windless Bight, Antarctica} \hfill \textbf{2012}\\
-\textbf{Lake Tahoe, California} \hfill \textbf{2012}\\
-\textbf{DeKalb County, Illinois} \hfill \textbf{2009}\\
-\textbf{Glacier Bay, Alaska} \hfill \textbf{2010}\\
-\textbf{Illinois (statewide)} \hfill \textbf{2009}\\
+\item[2016] R/V Sikuliaq, Central Pacific
+\item[2015--2016] Illinois (Statewide)
+\item[2015] Whillans Ice Stream Grounding Zone, Antarctica
+\item[2014] E/V Okeanos Explorer, North Atlantic
+\item[2013] Lake Tahoe, California 
+\item[2013] Subglacial Lake Whillans, Antarctica 
+\item[2012] Windless Bight, Antarctica 
+\item[2012] Lake Tahoe, California
+\item[2010] R/V Stellar, Glacier Bay, Alaska
+\item[2008--2009] Illinois (Statewide)
+
+\end{cvlist}
