--- a/sections/organizations.tex
+++ b/sections/organizations.tex
@@ -1,6 +1,5 @@
-\section{Organizations and Service}
-\begin{itemize}
-\item American Geophysical Union, Sigma Xi, Geological Society of America, International Glaciological Union.
-\item STEMfest volunteer communicating importance of polar research and organizing educational outreach activities for k-12 students.
-\end{itemize}
+\begin{cvlist}{Organizations and Service}
+        \item American Geophysical Union, Sigma Xi, Geological Society of America, International Glaciological Union.
+        \item STEMfest volunteer communicating importance of polar research and organizing educational outreach activities for k-12 students.
+\end{cvlist}
 
