--- a/sections/publications.tex
+++ b/sections/publications.tex
@@ -1,42 +1,45 @@
-%__________________________________________________________________________________________________________________
-% Journal Publications
-\renewcommand{\refname}{Journal Publications} 
-(\href{https://scholar.google.com/citations?user=3odnPwwAAAAJ&hl=en}{Google Scholar profile})
-\begin{thebibliography}{1}
-\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D., Scherer, R.P., Tulaczyk \textsl{in prep.}. Sedimentary processes at a modern Antarctic grounding zone.
-\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep.}. Runoff as first order control on glacial erosion driven.
-\bibitem{}\textbf{Hodson, T.O.}, and Powell, R.D., \textsl{in prep.}. Coastal collapse of the Cordilleran Ice Sheet preceding Meltwater Pulse 1A.
-\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D, Branecky, C., Scherer, R.P, Mukucki, J., et al. 
-    \textsl{in review}. Increasing West Antarctic Ice Sheet vulnerability to ocean warming under the Ross Ice Shelf. \textsl{Nature Communications}
-\bibitem{}\textbf{Hodson, T.O.}, Powell, R.D., Brachfeld, S.A., Tulaczyk, S., et al., 2016. Physical processes in Subglacial Lake Whillans, West Antarctica: Inferences from sediment cores.
-\textsl{Earth and Planetary Science Letters}.
-\bibitem{}Mikuki, J., et al., 2016, Subglacial Lake Whillans Biogeochemistry: A synthesis of current knowledge. \textsl{Phil. Trans. R. Soc. A}.
-\bibitem{}Vick-Majors, T.V., et al., 2015, Biogeochemistry and microbial diversity in the marine cavity beneath the McMurdo Ice Shelf, Antarctica.
-\textsl{Limnology and Oceanography}.
-\end{thebibliography}
-%__________________________________________________________________________________________________________________
-% Other Publications
-\renewcommand{\refname}{Other Publications}
-\begin{thebibliography}{1}
-\bibitem{}Cochrane, G.R., et al., 2015. Southern Salish Sea Habitat Map Series: Admiralty Inlet: U.S. Geological Survey Open-File Report 1073.
-\bibitem{}\textbf{Hodson, T.O.}, Cochrane, G.R., and Powell, R.D., 2013, Marine benthic habitat mapping of the West Arm, Glacier Bay National Park and Preserve, Alaska: U.S. Geological Survey Scientific Investigations Map 3253.
-\bibitem{}Curry, B.B. and \textbf{Hodson, T.O.}, 2009, Surficial Geology of Aurora South Quadrangle, DuPage, Kane, Kendall, and Will Counties, Illinois. Illinois State Geological Survey.
-\end{thebibliography}
-%__________________________________________________________________________________________________________________
-% Posters and Presentations
+%  PUBLICATIONS                %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\renewcommand{\refname}{Conference Participation}
-\begin{thebibliography}{3}
-\bibitem{}\textbf{Hodson, T.O.} et al. Environment at the Grounding Zone of the Whillans Ice Stream-Ross Ice Shelf, West Antarctica.
-\textsl{American Geophysical Union}, Fall Meeting, 2015.
-\bibitem{}\textbf{Hodson, T.O.} and Powell, R.D. Grounding zone sediment accumulation and tidewater and ice shelf stability. 
-\textsl{International Glaciological Society}, International symposium on Glaciers and Ice Sheets in a Warming World, 2015.
-\bibitem{}\textbf{Hodson, T.O.} and Powell, R.D. Physical and chemical characteristics of the Subglacial Lake Whillans sediment cores, Whillans Ice Stream, West Antarctica
-\textsl{American Geophysical Union}, Fall Meeting, 2013.
-\bibitem{}Powell, R.D. and \textbf{Hodson, T.O.} Refining the retreat history of the Cordilleran Ice Sheet from marine records. Geophysical Research Abstracts, Vol. 15, EGU General Assembly, 2013.
-\bibitem{}Cochrane, G.R., \textbf{Hodson, T.O.}, et al. Use of the Coastal and Marine Ecological Classification Standard (CMECS) for Geological Studies in Glacier Bay, Alaska.
-\textsl{American Geophysical Union}, Fall Meeting, 2012.
-\bibitem{}\textbf{Hodson, T.O.} and Powell, R.D. A deglacial chronology of the Glacier Bay Ice Stream, Southeast Alaska.
-\textsl{International Glaciological Society}, International symposium on glaciers and ice sheets in a warming climate, 2012.
-\bibitem{}Powell, R.D. and \textbf{Hodson, T.O.} Rapid Retreat of the Glacier Bay Ice Stream from the Last Glacial Maximum of the Cordilleran Ice Sheet, SE Alaska. Geophysical Research Abstracts, Vol. 13, EGU General Assembly, 2011.
-\end{thebibliography}
+\begin{cvlist}{Publications}
+  
+%  \item[]  \textit{The star symbol $\star$ indicates that the co-author is/was my graduate student or postdoc, and for conference contributions the student may have given the talk.}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% To process bibliography:
+% latex cvLorenaBarbaUS.tex
+% bibtex bu1
+% bibtex bu2
+% bibtex bu3
+% bibtex bu4
+% latex cvLorenaBarbaUS.tex
+
+%   SUBMITTED / PREPRINTS
+    \begin{bibunit}[unsrt]
+    \nocite{MesnardBarba2016,LaytonWangBarba2016}
+      \item[\textbf{Submitted or in preprint}]
+    \item[] \putbib[barba]
+    \end{bibunit}
+
+
+%  PUBLISHED JOURNAL PAPERS
+    \begin{bibunit}[unsrt]
+    \nocite{}
+    \item[\textbf{Journal papers}]
+    \item[] \putbib[barba]
+    \end{bibunit}
+
+% TECHNICAL REPORT
+    \begin{bibunit}[unsrt]
+    \nocite{}
+    \item[\textbf{Technical Reports}]
+    \item[] \putbib[barba]
+    \end{bibunit}
+  \end{cvlist}
+
+% CONFERENCE CONTRIBUTIONS
+   \begin{bibunit}[unsrt]
+   \nocite{} 
+   \item[\textbf{Conference contributions, with talk (unless otherwise noted)}]
+    \item[] \putbib[barba]
+    \end{bibunit}
+
+\end{cvlist}
