working on pubs section

--- a/cv.tex
+++ b/cv.tex
@@ -35,10 +35,12 @@
 \input{sections/header.tex}
 \input{sections/education.tex}
 \input{sections/experience_short.tex}
-%\input{sections/publications.tex}
+\input{sections/publications.tex}
 \input{sections/fieldwork.tex}
 \input{sections/awards.tex}
+\input{sections/organizations.tex}
 \input{sections/other.tex}
+
 \end{cv}
 \end{document}
 
