--- a/sections/fieldwork.tex
+++ b/sections/fieldwork.tex
@@ -2,34 +2,34 @@
 % Fieldwork
 \begin{cvlist}{Fieldwork} 
 
-\item[2016] R/V Sikuliaq, Central Pacific\\
+\item[2016] \textbf{R/V Sikuliaq, Central Pacific}\\
     UNOLS chief scientist training cruise aboard RV Sikuliaq.
 
-\item[2015--2016] Illinois (Statewide)\\
-    TODO CZO description here
+\item[2015--2016] \textbf{IML - Critical Zone Observatory, Illinois}\\
+    Maintenance of dataloggers and autonomous samplers for watershed monitoring.
 
-\item[2015] Whillans Ice Stream Grounding Zone, Antarctica \\
+\item[2015] \textbf{Ross Ice Shelf, Antarctica}\\
     Deployed instruments and recovered sediment cores beneath the Ross Ice Shelf.
 
-\item[2014] E/V Okeanos Explorer, North Atlantic \\
+\item[2014] \textbf{E/V Okeanos Explorer, North Atlantic}\\
     Mapped New England Seamount Chain off the coast of Rhode Island.
 
-\item[2013] Lake Tahoe, California \\
+\item[2013] \textbf{Lake Tahoe, California} \\
     Sea trials of ROV designed for exploring the ocean cavities beneath ice shelves.
 
-\item[2013] Subglacial Lake Whillans, Antarctica \\
-    Deployed instruments into and recovered sediment cores from an Antarctic lake beneath 800m of ice.
+\item[2013] \textbf{Subglacial Lake Whillans, Antarctica} \\
+    Deployed instruments into and recovered sediment cores from an Antarctic subglacial lake.
 
-\item[2012] Windless Bight, Antarctica \\
+\item[2012] \textbf{Windless Bight, Antarctica} \\
     Test deployment of subglacial sensor array and percussion corer.
 
-\item[2012] Lake Tahoe, California\\
-    Test deployment of a sensor array designed to study aquatic environments beneath ice sheets.
+\item[2012] \textbf{Lake Tahoe, California}\\
+    Test deployment of subglacial sensor array and percussion corer.
 
-\item[2010] R/V Stellar, Glacier Bay, Alaska \\
-    Groundtruthing investigations for seafloor habitat mapping using camera sled and ROV.
+\item[2010] \textbf{R/V Stellar, Glacier Bay, Alaska}\\
+    Groundtruthing seafloor habitats using camera sled and ROV.
 
-\item[2008--2009] Illinois (Statewide)\\
-    Stratigraphic drilling, monitoring well installation, and geophysical surveys for aquifer characterization and surficial mapping. 
+\item[2008--2009] \textbf{Illinois (Statewide)}\\
+    Stratigraphic drilling, monitoring well installation, and geophysical surveying. 
 
 \end{cvlist}
