--- a/sections/other.tex
+++ b/sections/other.tex
@@ -9,7 +9,7 @@
 
 \item[Software]
     \begin{itemize}
-        \item ArcGIS (4yrs), Adobe Illustrator, QGIS (3yrs), GRASS, GMT, FreeCAD, Git, \Latex, Fledermaus, Microsoft Office, Unix utilities
+        \item ArcGIS, Adobe Illustrator, QGIS,  GRASS, GMT, FreeCAD, Git, \LaTex, Fledermaus, Microsoft Office, Unix utilities
     \end{itemize}
 
 \item[Training] 
