--- a/sections/publications.tex
+++ b/sections/publications.tex
@@ -14,24 +14,32 @@
 
 %   SUBMITTED / PREPRINTS
     \begin{bibunit}[unsrt]
-    \nocite{MesnardBarba2016,LaytonWangBarba2016}
-      \item[\textbf{Submitted or in preprint}]
-    \item[] \putbib[barba]
+    \nocite{hodsonXXXXsedimentary,hodsonXXXXrunoff}
+      \item[\textbf{In Prep.}]
+    \item[] \putbib[hodson]
+    \end{bibunit}
+
+
+%   SUBMITTED / PREPRINTS
+    \begin{bibunit}[unsrt]
+    \nocite{hodsonXXXXincreasing,hodsonXXXXcoastal}
+    \item[\textbf{In Review}]
+    \putbib[hodson]
     \end{bibunit}
 
 
 %  PUBLISHED JOURNAL PAPERS
     \begin{bibunit}[unsrt]
-    \nocite{}
+    \nocite{hodson2016physical, mikucki2016subglacial, vick2015biogeochemistry}
     \item[\textbf{Journal papers}]
-    \item[] \putbib[barba]
+    \item[] \putbib[hodson]
     \end{bibunit}
 
 % TECHNICAL REPORT
     \begin{bibunit}[unsrt]
-    \nocite{}
+    \nocite{cochrane2015southern, hodson2013marine}
     \item[\textbf{Technical Reports}]
-    \item[] \putbib[barba]
+    \item[] \putbib[hodson]
     \end{bibunit}
   \end{cvlist}
 
@@ -39,7 +47,7 @@
    \begin{bibunit}[unsrt]
    \nocite{} 
    \item[\textbf{Conference contributions, with talk (unless otherwise noted)}]
-    \item[] \putbib[barba]
+    \item[] \putbib[hodson]
     \end{bibunit}
 
 \end{cvlist}
